<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="?android:attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:minHeight="64dp"
    android:orientation="horizontal"
    android:paddingLeft="12dp"
    android:paddingRight="12dp">

    <ImageView android:layout_width="42dp"
        android:layout_height="42dp"
        android:id="@+id/letter_view"
        android:contentDescription="@string/first_letter" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="12dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/placeholder_name"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/placeholder_balance" />

    </LinearLayout>

</LinearLayout>